--- a/src/formEngine.css
+++ b/src/formEngine.css
@@ -3,11 +3,25 @@
 }
 
 .fe-form {
-    border: 1px solid black;
+    border-left: 1px solid gray;
     width: 600px;
     margin: auto;
 }
 
 .fe-control {
+    padding: 0 5px 0 5px;
+    margin: 5px 0 5px 0;
+}
 
+.fe-control label {
+    display: block;
+    width: 200px;
+    float: left;
+}
+
+.fe-control input {
+    display: block;
+    margin-left: 210px;
+    width: 380px;
+    border: 1px solid gray;
 }
