binding to function, label control

--- a/src/extensions/formEngine.jqControls.css
+++ b/src/extensions/formEngine.jqControls.css
@@ -27,6 +27,12 @@
     border: 1px solid gray;
 }
 
+.fe-control .fe-control-span {
+    display: block;
+    margin-left: 210px;
+    width: 380px;
+}
+
 .fe-control .fe-control-checkbox {
     display: block;
     margin-left: 210px;
