--- a/extensions/jquery/source/fe.jquery.css
+++ b/extensions/jquery/source/fe.jquery.css
@@ -2,6 +2,24 @@
     display: none;
 }
 
+.fe-element {
+    width: 500px;
+    margin-bottom: 5px;
+    font-family: Verdana, Arial, sans-serif;
+    font-size: small;
+}
+
+.fe-element .fe-editor-wide {
+    width: 296px;
+}
+
+.fe-element input, .fe-element select { /* reset for form elements*/
+    border: 1px solid #D1D1D1;
+    font-family: Verdana, Arial, sans-serif;
+    font-size: small;
+    margin: 0;
+}
+
 .fe-element-label {
     display: inline-block;
     width: 200px;
@@ -10,5 +28,17 @@
 .fe-element-error {
     color: red;
     margin-left: 200px;
-    font-size: 0.8em;
+    font-size: x-small;
+    margin-top: 3px;
+}
+
+.fe-toolbar {
+    padding: 5px 0 5px 0;
+    text-align: right;
+    border-top: 1px dotted #D1D1D1;
+}
+
+.fe-element .ui-button .ui-button-text { /* fix for very big paddings of jquery ui button */
+    padding: 0.1em 0.4em 0.1em 1.8em;
+    font-size: medium;
 }
